; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_tc6393xb.c_tc6393xb_mmc_clk_div.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_tc6393xb.c_tc6393xb_mmc_clk_div.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.tc6393xb = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.platform_device*, i32)* @tc6393xb_mmc_clk_div to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tc6393xb_mmc_clk_div(%struct.platform_device* %0, i32 %1) #0 {
  %3 = alloca %struct.platform_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tc6393xb*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.platform_device*, %struct.platform_device** %3, align 8
  %7 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.tc6393xb* @dev_get_drvdata(i32 %9)
  store %struct.tc6393xb* %10, %struct.tc6393xb** %5, align 8
  %11 = load %struct.tc6393xb*, %struct.tc6393xb** %5, align 8
  %12 = getelementptr inbounds %struct.tc6393xb, %struct.tc6393xb* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = add nsw i64 %13, 512
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @tmio_core_mmc_clk_div(i64 %14, i32 0, i32 %15)
  ret void
}

declare dso_local %struct.tc6393xb* @dev_get_drvdata(i32) #1

declare dso_local i32 @tmio_core_mmc_clk_div(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
